--- a/photography.html
+++ b/photography.html
@@ -105,8 +105,16 @@
         </div>
       </div>
 
+      <!-- 新增分类过滤 -->
+      <div class="filter-buttons" style="padding: 2rem; text-align: center">
+        <button class="button active" data-filter="all">All</button>
+        <button class="button" data-filter="china">China</button>
+        <button class="button" data-filter="europe">Europe</button>
+        <button class="button" data-filter="africa">Africa</button>
+      </div>
+
       <div class="photo-grid">
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/london2.JPG"
             data-lightbox="gallery"
@@ -122,7 +130,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/regents.jpg"
             data-lightbox="gallery"
@@ -138,7 +146,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/switzerland.JPG"
             data-lightbox="gallery"
@@ -154,7 +162,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/copenhagen.JPG"
             data-lightbox="gallery"
@@ -170,7 +178,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/paris2.JPG"
             data-lightbox="gallery"
@@ -183,7 +191,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item africa" data-category="africa">
           <a
             href="/images/photograph/full/morocco.JPG"
             data-lightbox="gallery"
@@ -199,7 +207,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item africa" data-category="africa">
           <a
             href="/images/photograph/full/morocco2.JPG"
             data-lightbox="gallery"
@@ -215,7 +223,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item china" data-category="china">
           <a
             href="/images/photograph/full/beihai_park.JPG"
             data-lightbox="gallery"
@@ -231,7 +239,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/epping_forest.jpg"
             data-lightbox="gallery"
@@ -247,7 +255,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/white_cliff.JPG"
             data-lightbox="gallery"
@@ -263,7 +271,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/switzerland2.JPG"
             data-lightbox="gallery"
@@ -279,7 +287,7 @@
             </div>
           </a>
         </div>
-        <div class="grid-item city" data-category="city">
+        <div class="grid-item europe" data-category="europe">
           <a
             href="/images/photograph/full/paris.JPG"
             data-lightbox="gallery"
