--- a/photography.html
+++ b/photography.html
@@ -375,6 +375,19 @@
     <script src="/assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script>
+      // 过滤功能
+      document.querySelectorAll(".filter-buttons .button").forEach((button) => {
+        button.addEventListener("click", () => {
+          const filter = button.dataset.filter;
+          document.querySelectorAll(".grid-item").forEach((item) => {
+            item.style.display =
+              filter === "all" || item.dataset.category === filter
+                ? "block"
+                : "none";
+          });
+        });
+      });
+
       // 更新lightbox配置以支持视频
       lightbox.option({
         resizeDuration: 200,
