--- a/photography.html
+++ b/photography.html
@@ -124,7 +124,7 @@
           border: 1px solid #ddd;
         }
 
-        .button.active {
+        .button:active {
           color: black;
           background: #fff;
           box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
