--- a/photography.html
+++ b/photography.html
@@ -83,27 +83,38 @@
 
       <!-- Main -->
 
-      <div class="photo-grid">
-        <div class="grid-item video" data-category="video">
-          <div class="video-wrapper">
-            <a
-              href="https://youtu.be/PSpghrPLQXI"
-              data-lightbox="video-gallery"
-              data-title="My Travel Memories"
-              class="video-thumbnail"
-            >
-              <img
-                src="//img.youtube.com/vi/PSpghrPLQXI/maxresdefault.jpg"
-                alt="Video thumbnail"
-              />
-              <div class="play-button"></div>
-              <div class="photo-info">
-                <h3>2024 Highlights</h3>
-              </div>
-            </a>
+      <section class="highlights-section">
+        <div class="highlight-container">
+          <!-- 视频部分 -->
+          <div class="highlight-media">
+            <div class="video-wrapper">
+              <a
+                href="https://youtu.be/PSpghrPLQXI"
+                data-lightbox="video-gallery"
+                data-title="My Travel Memories"
+                class="video-thumbnail"
+              >
+                <img
+                  src="//img.youtube.com/vi/PSpghrPLQXI/maxresdefault.jpg"
+                  alt="2024 Highlights Video"
+                />
+                <div class="play-button"></div>
+              </a>
+            </div>
+          </div>
+
+          <!-- 文字介绍部分 -->
+          <div class="highlight-content">
+            <h2>2024 Journey Highlights</h2>
+            <div class="content-scroll">
+              <p>
+                This year's adventures took me through breathtaking landscapes
+                and vibrant cities across many countries.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 新增分类过滤 -->
       <div class="filter-buttons" style="padding: 2rem; text-align: center">
