--- a/notes.html
+++ b/notes.html
@@ -76,45 +76,35 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section class="tag-cloud">
-                <h4 style="font-weight: 500">
-                  <i class="fas fa-university"></i> University
-                </h4>
+                <h4><i class="fas fa-university"></i> University</h4>
                 <div class="tag-container" data-filter="university">
                   <!-- 动态生成大学标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4 style="font-weight: 500">
-                  <i class="fas fa-calendar-alt"></i> Year
-                </h4>
+                <h4><i class="fas fa-calendar-alt"></i> Year</h4>
                 <div class="tag-container" data-filter="year">
                   <!-- 动态生成年份标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4 style="font-weight: 500">
-                  <i class="fas fa-layer-group"></i> Level
-                </h4>
+                <h4><i class="fas fa-layer-group"></i> Level</h4>
                 <div class="tag-container" data-filter="level">
                   <!-- 动态生成级别标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4 style="font-weight: 500">
-                  <i class="fas fa-feather"></i> Subject
-                </h4>
+                <h4><i class="fas fa-feather"></i> Subject</h4>
                 <div class="tag-container" data-filter="subject">
                   <!-- 动态生成学科标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4 style="font-weight: 500">
-                  <i class="fas fa-language"></i> Language
-                </h4>
+                <h4><i class="fas fa-language"></i> Language</h4>
                 <div class="tag-container" data-filter="language">
                   <!-- 动态生成学科标签 -->
                 </div>
@@ -145,9 +135,7 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Quantum Information (Fall 2023)
-                      </h4>
+                      <h4>Quantum Information (Fall 2023)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
@@ -171,9 +159,7 @@
                   </div>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Quantum Optics (Fall 2023)
-                      </h4>
+                      <h4>Quantum Optics (Fall 2023)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
@@ -194,9 +180,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Mathematical Methods for Physicists (Fall 2023)
-                      </h4>
+                      <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
@@ -223,9 +207,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Advanced Classical Mechanics (Fall 2023)
-                      </h4>
+                      <h4>Advanced Classical Mechanics (Fall 2023)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
@@ -247,9 +229,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Quantum Theory of Matter (Spring 2024)
-                      </h4>
+                      <h4>Quantum Theory of Matter (Spring 2024)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -271,9 +251,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Laser Technology (Spring 2024)
-                      </h4>
+                      <h4>Laser Technology (Spring 2024)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -321,9 +299,7 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Mathematical Methods in Physics (Fall 2019)
-                      </h4>
+                      <h4>Mathematical Methods in Physics (Fall 2019)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Math</span>
@@ -362,9 +338,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Theoretical Mechanics (Fall 2019)
-                      </h4>
+                      <h4>Theoretical Mechanics (Fall 2019)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -392,9 +366,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Electromagnetics (Fall 2019)
-                      </h4>
+                      <h4>Electromagnetics (Fall 2019)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -419,7 +391,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">Optics (Spring 2020)</h4>
+                      <h4>Optics (Spring 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -469,9 +441,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Analogue Electronics (Spring 2020)
-                      </h4>
+                      <h4>Analogue Electronics (Spring 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
@@ -513,9 +483,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Quantum Mechanics (Fall 2020)
-                      </h4>
+                      <h4>Quantum Mechanics (Fall 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -552,9 +520,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Electrodynamics (Fall 2020)
-                      </h4>
+                      <h4>Electrodynamics (Fall 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -576,9 +542,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Advanced Quantum Mechanics (Fall 2020)
-                      </h4>
+                      <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -600,9 +564,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Digital Electronics (Fall 2020)
-                      </h4>
+                      <h4>Digital Electronics (Fall 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
@@ -648,7 +610,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
+                      <h4>
                         Thermodynamics and Statistical Physics (Spring 2021)
                       </h4>
                       <div class="note-meta">
@@ -681,9 +643,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Solid State Physics (Spring 2021)
-                      </h4>
+                      <h4>Solid State Physics (Spring 2021)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -705,9 +665,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Quantum Optics (Fall 2021)
-                      </h4>
+                      <h4>Quantum Optics (Fall 2021)</h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -736,9 +694,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Introduction to Plasma Physics (Fall 2021)
-                      </h4>
+                      <h4>Introduction to Plasma Physics (Fall 2021)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -766,9 +722,7 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">
-                        Quantum Mechanics II (Summer 2020)
-                      </h4>
+                      <h4>Quantum Mechanics II (Summer 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -840,7 +794,7 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4 style="font-weight: 500">Physics GRE (Fall 2021)</h4>
+                      <h4>Physics GRE (Fall 2021)</h4>
                       <div class="note-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
