--- a/research/charge-noise-in-semiconductor-spin-qubits.html
+++ b/research/charge-noise-in-semiconductor-spin-qubits.html
@@ -77,24 +77,24 @@
               <hr class="first" />
 
               <section>
-                <h4 style="font-weight: 500">
+                <h4>
                   <a href="/research/index.html">Overview</a>
                 </h4>
                 <p></p>
-                <h4 style="font-weight: 500">
+                <h4>
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
                     >Compilation for neutral atom quantum computers</a
                   >
                 </h4>
                 <p></p>
-                <h4 style="font-weight: 500">
+                <h4>
                   <a href="/research/calibration-of-trapped-ion-systems.html"
                     >Calibration of trapped-ion systems</a
                   >
                 </h4>
                 <p></p>
-                <h4 style="font-weight: 500">
+                <h4>
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge noise in semiconductor spin qubits</a
@@ -134,11 +134,9 @@
                   <h3>Theory</h3>
                 </header>
                 <p></p>
-                <h4 style="font-weight: 500">Coulomb blockade</h4>
-                <h4 style="font-weight: 500">
-                  Charge transport through quantum dots
-                </h4>
-                <h4 style="font-weight: 500">Charge noise</h4>
+                <h4>Coulomb blockade</h4>
+                <h4>Charge transport through quantum dots</h4>
+                <h4>Charge noise</h4>
               </section>
               <hr />
               <section id="simulation">
