--- a/photography.html
+++ b/photography.html
@@ -306,8 +306,8 @@
           >
             <img src="/images/photograph/small/paris.jpeg" alt="France View" />
             <div class="photo-info">
-              <h3>February 2024</h3>
-              <p>June 2024</p>
+              <h3>Paris, France</h3>
+              <p>February 2024</p>
             </div>
           </a>
         </div>
