--- a/photography.html
+++ b/photography.html
@@ -88,6 +88,19 @@
           <!-- 视频部分 -->
           <div class="highlight-media">
             <div class="video-wrapper">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/PSpghrPLQXI?rel=0&autoplay=1"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+
+            <!--
+            <div class="video-wrapper">
               <a
                 href="https://youtu.be/PSpghrPLQXI"
                 data-lightbox="video-gallery"
@@ -100,7 +113,7 @@
                 />
                 <div class="play-button"></div>
               </a>
-            </div>
+            </div>-->
           </div>
 
           <!-- 文字介绍部分 -->
