--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=nutrition"
+    />
     <noscript
       ><link rel="stylesheet" href="/assets/css/noscript.css"
     /></noscript>
@@ -208,8 +212,8 @@
               morning person who enjoys the calm and peacefulness of the early
               hours. Interestingly, "Chen" is sometimes misheard as "Cheng,"
               which means "orange" in Chinese. Because of this playful
-              similarity, my friends affectionately call me "Cheng-Zi," meaning
-              "orange."
+              similarity, my friends affectionately call me "Cheng-Zi."
+              <span class="material-symbols-outlined"> nutrition </span>
             </p>
             <p>
               My surname is <strong>Huang</strong>, which means "yellow" in
