--- a/photography.html
+++ b/photography.html
@@ -130,7 +130,7 @@
       </section>
 
       <!-- 新增分类过滤 -->
-      <div class="filter-buttons" style="padding: 2rem">
+      <div class="filter-buttons" style="padding: 3rem; text-align: center">
         <button class="button active" data-filter="all">All</button>
         <button class="button" data-filter="china">China</button>
         <button class="button" data-filter="europe">Europe</button>
