--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -109,12 +109,11 @@
               </header>
               <p>
                 This is the inaugural issue of
-                <strong style="font-weight: 700"
-                  >IBPE Review Letters (IRL)</strong
-                >, a journal my teammates and I established to preserve and
-                share the intellectual output of IBPE members. While IBPE is
-                known for its numerous reading and exploratory activities, many
-                brilliant outcomes from past projects were unfortunately left
+                <strong>IBPE Review Letters (IRL)</strong>, a journal my
+                teammates and I established to preserve and share the
+                intellectual output of IBPE members. While IBPE is known for its
+                numerous reading and exploratory activities, many brilliant
+                outcomes from past projects were unfortunately left
                 undocumented, leading to the loss of valuable insights over
                 time. To address this, we created IRL to publish key
                 achievements from IBPE activities, contributions to the IBPE
