--- a/research/calibration-of-trapped-ion-systems.html
+++ b/research/calibration-of-trapped-ion-systems.html
@@ -184,9 +184,7 @@
                     non-equidistant, making them suitable for qubit encoding.
                   </li>
                   <li>
-                    <strong style="font-weight: 700"
-                      >Qubit manipulation:</strong
-                    >
+                    <strong>Qubit manipulation:</strong>
                     By carefully selecting specific laser frequencies and
                     applying precise laser techniques, the trapped-ion system
                     enables the preparation of initial quantum states, the
