--- a/research/index.html
+++ b/research/index.html
@@ -136,9 +136,7 @@
                   >
                   underscores the growing significance of artificial
                   intelligence in scientific research. I believe that
-                  <strong style="font-weight: 700"
-                    >integrating AI into physics investigations</strong
-                  >
+                  <strong>integrating AI into physics investigations</strong>
                   is an emerging trend, offering the potential to significantly
                   accelerate discoveries and expand the boundaries of the field.
                 </p>
