--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <p class="text-secondary">Jun. 2024 - Present</p>
               <p>
                 Under the guidance of Dr. John Michniewicz, I investigate
-                <strong style="font-weight: 700"
+                <strong
                   ><i
                     >charge noise in semiconductor spin qubits for quantum
                     computing</i
@@ -285,9 +285,7 @@
                 at cryogenic temperatures using a
                 <strong>dilution refrigerator</strong>. To streamline
                 experiments, I
-                <strong style="font-weight: 600"
-                  >developed automated Python packages</strong
-                >
+                <strong>developed automated Python packages</strong>
                 that standardizes communication across experimental devices,
                 significantly improving measurement efficiency.
               </p>
@@ -302,7 +300,7 @@
               <p class="text-secondary">May 2024 - Present</p>
               <p>
                 As a remote intern at BAQIS, I focus on
-                <strong style="font-weight: 700"
+                <strong
                   ><i>compilation for neutral atom quantum computers</i></strong
                 >, an emerging quantum research field. I introduced
                 <strong>ZAP</strong>, a zoned architecture that
@@ -313,9 +311,8 @@
                 algorithm, ZAP optimizes qubit placement and movement, fully
                 utilizing the dynamic connectivity and large-scale parallelism
                 of neutral atom platforms, leading to a
-                <strong style="font-weight: 600"
-                  >significant fidelity improvement</strong
-                >. This work is available on
+                <strong>significant fidelity improvement</strong>. This work is
+                available on
                 <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
               </p>
             </div>
@@ -330,7 +327,7 @@
               <p class="text-secondary">Mar. 2023 - Sep. 2023</p>
               <p>
                 Under Dr. Jingbo Wang, I developed an
-                <strong style="font-weight: 700"
+                <strong
                   ><i
                     >automated calibration framework for trapped-ion quantum
                     computers</i
@@ -357,7 +354,7 @@
               <p class="text-secondary">Apr. 2019 - Dec. 2022</p>
               <p>
                 For my final year project,
-                <strong style="font-weight: 700"
+                <strong
                   ><i
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</i
                   ></strong
@@ -386,20 +383,17 @@
                 >
                   MITACS Globalink Research Internship</a
                 >, I contributed to the project
-                <strong style="font-weight: 700"
+                <strong
                   ><i
                     >New Plasma Processing Techniques for Advanced Materials</i
                   ></strong
                 >
                 under Prof. Michael Bradley. Due to COVID-19 travel
                 restrictions, my work was conducted remotely, focusing on
-                <strong style="font-weight: 600"
-                  >plasma motion simulations</strong
-                >
+                <strong>plasma motion simulations</strong>
                 and coding tasks, while gaining insights into
-                <strong style="font-weight: 600"
-                  >plasma processing techniques</strong
-                >. (<a href="/docs/certificate/certificate-MITACS.pdf"
+                <strong>plasma processing techniques</strong>. (<a
+                  href="/docs/certificate/certificate-MITACS.pdf"
                   >View Certificate</a
                 >)
               </p>
@@ -416,19 +410,15 @@
               <p>
                 During my summer research internship under Prof. Hao Zheng, I
                 conducted an
-                <strong style="font-weight: 700"
-                  ><i>STM study on topological insulators</i></strong
+                <strong><i>STM study on topological insulators</i></strong
                 >. My work involved
                 <strong>fabricating STM tips</strong>
                 via electrochemical methods, performing
                 <strong>Raman spectroscopy</strong>, and studying
-                <strong style="font-weight: 600"
-                  >Molecular Beam Epitaxy (MBE)</strong
-                >
+                <strong>Molecular Beam Epitaxy (MBE)</strong>
                 and
-                <strong style="font-weight: 600"
-                  >Scanning Tunneling Microscopy (STM)</strong
-                >. Additionally, I contributed to assembling a
+                <strong>Scanning Tunneling Microscopy (STM)</strong>.
+                Additionally, I contributed to assembling a
                 <strong>dilution refrigerator</strong>, gaining hands-on
                 experience with advanced experimental techniques.
               </p>
@@ -441,13 +431,12 @@
             </header>
             <ul>
               <li>
-                <strong style="font-weight: 700"
-                  >China National Scholarship</strong
-                >, Ministry of Education of P.R. China, 2019<br />
+                <strong>China National Scholarship</strong>, Ministry of
+                Education of P.R. China, 2019<br />
                 <i>*The highest honor for university students in China.</i>
               </li>
               <li>
-                <strong style="font-weight: 700"
+                <strong
                   >Outstanding Undergraduates in Term of Academic
                   Performance</strong
                 >, HUST, 2019<br />
