--- a/presentations.html
+++ b/presentations.html
@@ -161,8 +161,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700"
-                    >IBPE Annual Conference: </strong
+                  <strong>IBPE Annual Conference: </strong
                   ><a href="/docs/presentations/2023-04-29-ion-trap-qc.pdf"
                     >Ion Trap Quantum Computing: From Theory to Reality</a
                   ><br />
