--- a/index.html
+++ b/index.html
@@ -439,16 +439,15 @@
                 <strong
                   >Outstanding Undergraduates in Term of Academic
                   Performance</strong
-                >, HUST, 2019<br />
-                <i
-                  >*The greatest honor for undergraduates at HUST, awarded to
-                  top 1%. The awarded students will be provided with
-                  professional instructors and personalized talent training
-                  plans. (<a
+                >, HUST, 2019
+                <p class="text-secondary">
+                  *The greatest honor for undergraduates at HUST, awarded to top
+                  1%. The awarded students will be provided with professional
+                  instructors and personalized talent training plans. (<a
                     href="/docs/certificate/certificate-outstanding-UG.pdf"
                     >View Certificate</a
-                  >)</i
-                >
+                  >)
+                </p>
               </li>
               <li>
                 <strong>Yan Ji-Ci Scholarship</strong>, Institute of Physics,
