--- a/index.html
+++ b/index.html
@@ -432,8 +432,10 @@
             <ul>
               <li>
                 <strong>China National Scholarship</strong>, Ministry of
-                Education of P.R. China, 2019<br />
-                <i>*The highest honor for university students in China.</i>
+                Education of P.R. China, 2019
+                <p class="text-secondary">
+                  The highest honor for university students in China.
+                </p>
               </li>
               <li>
                 <strong
@@ -441,7 +443,7 @@
                   Performance</strong
                 >, HUST, 2019
                 <p class="text-secondary">
-                  *The greatest honor for undergraduates at HUST, awarded to top
+                  The greatest honor for undergraduates at HUST, awarded to top
                   1%. The awarded students will be provided with professional
                   instructors and personalized talent training plans. (<a
                     href="/docs/certificate/certificate-outstanding-UG.pdf"
